tests/ui/span/issue-25199.stderr
error[E0597]: `container` does not live long enough
  --> $DIR/issue-25199.rs:66:29
   |
LL |     let container = Container::new();
   |         --------- binding `container` declared here
LL |     let test = Test { test: &container };
   |                             ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | `container` dropped here while still borrowed
   | borrow might be used here, when `container` is dropped and runs the destructor for type `Container<'_>`

warning: panic message is not a string literal
  --> $DIR/issue-25199.rs:58:26
   |
LL |             assert!(e.0, e.1);
   |                          ^^^
   |
   = note: this usage of `assert!()` is deprecated; it will be a hard error in Rust 2021
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/panic-macro-consistency.html>
   = note: `#[warn(non_fmt_panics)]` on by default
help: add a "{}" format string to `Display` the message
   |
LL |             assert!(e.0, "{}", e.1);
   |                          +++++

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0597`.
